--- a/src/style.css
+++ b/src/style.css
@@ -34,20 +34,20 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 3px;
+  height: 3px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #f1f1f100;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: var(--lighter);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: var(--lightest);
 }
