--- a/src/style.css
+++ b/src/style.css
@@ -34,20 +34,20 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  height: 3px;
+  width: 3px;
 }
 
-/* Track */
+
 ::-webkit-scrollbar-track {
   background: #f1f1f100;
+  border-radius: 1px;
 }
 
-/* Handle */
+
 ::-webkit-scrollbar-thumb {
   background: var(--lighter);
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--lightest);
 }
